add auth and users endpoint, and their tests
